<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

        <TextView
            android:id="@+id/tv_f_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"/>
            <!--android:padding="8dp"-->
            />

        <TextView
            android:id="@+id/tv_l_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"/>
            <!--android:padding="8dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/tv_f_name"/>-->

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/age"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"/>
            <!--android:padding="8dp"-->
        <!--tools:layout_editor_absoluteX="16dp" />-->


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/email"
            tools:ignore="MissingConstraints"/>
        <!--android:padding="8dp"-->


        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/phone"
            tools:ignore="MissingConstraints"/>
        <!--android:padding="8dp"-->


        <TextView
            android:id="@+id/tv_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/birthdate"
            tools:ignore="MissingConstraints"/>
        <!--android:padding="8dp"-->


        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/country"
            tools:ignore="MissingConstraints" />
        <!--android:padding="8dp"-->


        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            tools:ignore="MissingConstraints"/>
        <!--android:padding="8dp"-->
</LinearLayout>