<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="8dp"
    android:layout_gravity="center"
    android:layout_centerVertical="true"
    android:id="@+id/a_u_details">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/firstname"/>

    <TextView
        android:id="@+id/a_userdetails_tv_f_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lastname"/>

        <TextView
        android:id="@+id/a_userdetails_tv_l_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/age"/>

        <TextView
        android:id="@+id/a_userdetails_tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"/>

        <TextView
        android:id="@+id/a_userdetails_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone"/>

        <TextView
        android:id="@+id/a_userdetails_tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/birthdate"/>

        <TextView
        android:id="@+id/a_userdetails_tv_bdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/country"/>

        <TextView
        android:id="@+id/a_userdetails_tv_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/state"/>

        <TextView
        android:id="@+id/a_userdetails_tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state"/>
    </LinearLayout>

</LinearLayout>